# Grid-Quest

./: .gitignore  CMakeLists.txt  Grid.h  README.md  cursor.h  main.cpp  main2.cpp  oldExample.cpp  scheme.h  state.h
db/: create-database.sql  create-domains-tables.sql  create-functions.sql
db/create-functions/: insert-functions.sql  user-info-functions.sql  utility-functions.sql
diagrams/: activity-diagram(quest).wsd  architectural-diagram.wsd  message-sequence-chart.wsd  state-diagram(menu).wsd
doc/Database Relational Schema/: 1. Requirements.txt  2. ER Diagram.wsd
etc/savedSettings/: controls.txt  graphic.txt
include/: cursor.h  grid.h  monitors.h  server_quest.h  settings.h  state.h  utils.h
savedSettings/: graphic.txt
src/: CMakeLists.txt  cursor.cpp  cursor.h  grid.cpp  grid.h  main.cpp  menu.cpp  monitors.cpp  monitors.h  settings.cpp  settings.h  state.cpp  state.h  utils.cpp  utils.h
src/doc/: activity-diagram(quest).wsd  architectural-diagram.wsd  database-ER-Diagram.wsd  message-sequence-chart.wsd  use-case-diagram.wsd
src/monitors/: CMakeLists.txt  analyzeStats.cpp  anomalyDetect.cpp  anomalyDetector.cpp  inputsObserve.cpp  inputsObserver.cpp  loadTimes.cpp  questAnalyze.cpp  questAnalyzer.cpp  sessionTrack.cpp  sessionTracker.cpp  trackInputs.cpp
src/server/: CMakeLists.txt  server.cpp  server_quest.cpp
src/states/: menu.cpp
test/: CMakeLists.txt  grid_tests.cpp  settings_tests.cpp  test_generator.cpp
